--- a/public/saa/index.html
+++ b/public/saa/index.html
@@ -3,8 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="AWS, certification, study guides, Solutions Architect, flashcards, practice tests, Reese Gerjekian">
+    <meta name="description" content="">
+    <link rel="canonical" href="https://aws-study-guides.github.io/saa/">
+    <meta name="author" content="">
     <title>AWS Certified Solutions Architect - Associate (SAA-C03)</title>
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="manifest" href="/manifest.json">
+    <meta property="og:title" content="AWS Certified Solutions Architect - Associate (SAA-C03)">
+    <meta property="og:description" content="">
+    <meta property="og:image" content="path/to/default-image.jpg">
+    <meta property="og:url" content="https://aws-study-guides.github.io/saa/">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="AWS Certified Solutions Architect - Associate (SAA-C03)">
+    <meta name="twitter:description" content="">
+    <meta name="twitter:image" content="path/to/default-image.jpg">
+    <meta name="robots" content="index, follow">
 </head>
 <body>
     
