--- a/public/saa/overview/index.html
+++ b/public/saa/overview/index.html
@@ -12,13 +12,13 @@
     <link rel="manifest" href="/manifest.json">
     <meta property="og:title" content="SAA-C03 Exam Overview">
     <meta property="og:description" content="">
-    <meta property="og:image" content="path/to/default-image.jpg">
+    <meta property="og:image" content="/images/icons/icon-512x512.png">
     <meta property="og:url" content="https://aws-study-guides.github.io/saa/overview/">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="SAA-C03 Exam Overview">
     <meta name="twitter:description" content="">
-    <meta name="twitter:image" content="path/to/default-image.jpg">
+    <meta name="twitter:image" content="/images/icons/icon-512x512.png">
     <meta name="robots" content="index, follow">
 </head>
 <body>
