--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="">
     <link rel="canonical" href="https://aws-study-guides.github.io/">
     <meta name="author" content="">
+    <link rel="icon" href="/images/icons/icon-512x512.png" type="image/png">
     <title>AWS Study Guides</title>
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="manifest" href="/manifest.json">
