--- a/public/saa/index.html
+++ b/public/saa/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="">
     <link rel="canonical" href="https://aws-study-guides.github.io/saa/">
     <meta name="author" content="">
+    <link rel="icon" href="/images/icons/icon-512x512.png" type="image/png">
     <title>AWS Certified Solutions Architect - Associate (SAA-C03)</title>
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="manifest" href="/manifest.json">
