--- a/public/saa/quiz/index.html
+++ b/public/saa/quiz/index.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="AWS, certification, study guides, Solutions Architect, flashcards, practice tests, Reese Gerjekian">
-    <meta name="description" content="">
+    <meta name="description" content="Explore comprehensive AWS Certification Study Guides, including resources for the AWS Solutions Architect Associate (SAA-003) exam. Access detailed guides, flashcards, and practice tests to boost your cloud expertise and prepare effectively for AWS certifications.">
     <link rel="canonical" href="https://aws-study-guides.github.io/saa/quiz/">
-    <meta name="author" content="">
+    <meta name="author" content="Reese Gerjekian">
     <link rel="icon" href="/images/icons/icon-512x512.png" type="image/png">
     <title>SAA-C03 Practice Test</title>
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="manifest" href="/manifest.json">
     <meta property="og:title" content="SAA-C03 Practice Test">
-    <meta property="og:description" content="">
+    <meta property="og:description" content="Explore comprehensive AWS Certification Study Guides, including resources for the AWS Solutions Architect Associate (SAA-003) exam. Access detailed guides, flashcards, and practice tests to boost your cloud expertise and prepare effectively for AWS certifications.">
     <meta property="og:image" content="/images/icons/icon-512x512.png">
     <meta property="og:url" content="https://aws-study-guides.github.io/saa/quiz/">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="SAA-C03 Practice Test">
-    <meta name="twitter:description" content="">
+    <meta name="twitter:description" content="Explore comprehensive AWS Certification Study Guides, including resources for the AWS Solutions Architect Associate (SAA-003) exam. Access detailed guides, flashcards, and practice tests to boost your cloud expertise and prepare effectively for AWS certifications.">
     <meta name="twitter:image" content="/images/icons/icon-512x512.png">
     <meta name="robots" content="index, follow">
 </head>
